--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,3 +65,12 @@
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+.monsterh4 {
+	border-top: thin solid;
+    border-bottom: thin solid;
+    margin: 5px 0px;
+    background-color: rgb(207,226,243);
+    padding: 3px;
+    font-size: 18px;
+}
